tests/kulezi_tests/bad/invalid_op036.lat
int main() {
    false || (
    true && (
    true == 
    ! (
    - (
    1 + (
    2 - (
    3 * (
    4 / ( 
    5 % "3"))))))));
    return 0;
}